--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -21,6 +21,8 @@
 }
 
 .portfolio__card-item {
+  width: calc(100%-30px);
+  height: 404px;
   margin-bottom: 30px;
   transition: box-shadow $animation-var;
   &:hover,
@@ -50,22 +52,13 @@
   .portfolio__button-list {
     justify-content: start;
   }
-
-  .portfolio__card-list {
-    flex-direction: column;
-    align-items: stretch;
-  }
 }
 
 @media screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
   .portfolio__card-item {
     width: 354px;
-    height: 440px;
     margin-right: 30px;
     margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
 
     &:nth-child(even) {
       margin-right: 0;
@@ -75,15 +68,11 @@
       margin-right: 0;
     }
   }
-  .portfolio__card-link {
-    height: 100%;
-  }
 }
 
 @media screen and (min-width: $desktop-min) {
   .portfolio__card-item {
     width: 370px;
-    height: 404px;
     margin-left: 30px;
     margin-bottom: 30px;
 
