team_cards doing

--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -22,6 +22,7 @@
 }
 
 .team-member {
+  width: 100%;
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -35,7 +36,7 @@
   }
 
   &__img {
-    width: 450px;
+    max-width: 100%;
   }
 
   &__name {
