--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
 .hero, .features, .team, .partners, .portfolio, .page-footer {
   width: 100%;
-  min-width: 480px;
+  min-width: 320px;
   padding-top: 60px;
   padding-bottom: 60px;
   margin-right: auto;
   margin-left: auto;
 }
 
-@media screen and (max-width: 1599px) {
+@media screen and (max-width: 1199px) {
   .hero, .features, .team, .partners, .portfolio, .page-footer {
     padding-top: 60px;
     padding-bottom: 60px;
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .hero, .features, .team, .partners, .portfolio, .page-footer {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -23,19 +23,20 @@
 }
 
 .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
-  width: 480px;
+  width: 100%;
+  min-width: 320px;
   padding: 0 15px 0 15px;
   margin-right: auto;
   margin-left: auto;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
     width: 768px;
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
     width: 1200px;
   }
@@ -99,6 +100,7 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: #ffffff;
   color: #757575;
   font-family: Roboto, sans-serif;
@@ -123,6 +125,7 @@ img {
 
 .page-header {
   position: relative;
+  width: 100%;
   border-bottom: 1px solid #ececec;
 }
 
@@ -168,13 +171,13 @@ img {
   padding-bottom: 20px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .logo--headered {
     margin-right: 88px;
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .logo {
     font-size: 26px;
   }
@@ -191,7 +194,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .nav__list {
     margin-right: 84px;
   }
@@ -296,7 +299,7 @@ img {
   margin-right: 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
     font-size: 12px;
   }
@@ -322,7 +325,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .contacts {
     margin-left: auto;
   }
@@ -349,6 +352,7 @@ img {
 
 .hero {
   max-width: 100%;
+  width: 100%;
   padding: 118px 60px;
   text-align: center;
   border-right-color: #c4c4c4;
@@ -364,7 +368,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
     padding: 118px 204px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/t.hero-bg-image1X.jpg);
@@ -372,13 +376,13 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1599px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1599px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1599px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
   .hero .hero {
     background-image: url(../images/t.hero-bg-image2X.jpg);
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .hero {
     padding: 200px 452px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/d.hero-bg-image1X.jpg);
@@ -386,7 +390,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) and (min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (min-resolution: 192dpi), screen and (min-width: 1600px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero .hero {
     background-image: url(../images/d.hero-bg-image2X.jpg);
   }
@@ -404,7 +408,13 @@ img {
   color: #ffffff;
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .hero__title {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .hero__title {
     width: 696px;
     font-size: 44px;
@@ -452,7 +462,7 @@ img {
   margin-bottom: 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .features__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -477,7 +487,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .features__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -504,7 +514,7 @@ img {
   display: block;
 }
 
-@media screen and (max-width: 1599px) {
+@media screen and (max-width: 1199px) {
   .production {
     display: none;
   }
@@ -564,6 +574,7 @@ img {
 }
 
 .team-member {
+  width: 100%;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -578,7 +589,7 @@ img {
 }
 
 .team-member__img {
-  width: 450px;
+  max-width: 100%;
 }
 
 .team-member__name {
@@ -603,7 +614,7 @@ img {
   color: #757575;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -638,7 +649,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .team__title {
     text-align: center;
     margin-bottom: 50px;
@@ -731,7 +742,7 @@ img {
       align-self: flex-start;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .social-links {
     margin-bottom: 0;
   }
@@ -751,7 +762,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .social-links {
     margin-bottom: 60px;
   }
@@ -868,7 +879,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .partners__item {
     width: calc(30.0033%);
     margin-right: 30px;
@@ -882,7 +893,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .partners__title {
     margin-bottom: 50px;
     font-size: 36px;
@@ -917,7 +928,7 @@ img {
           align-items: center;
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .button__subscribe {
     margin-left: 12px;
     -ms-flex-wrap: nowrap;
@@ -979,7 +990,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .portfolio__button-list {
     margin-bottom: 30px;
     -webkit-box-align: start;
@@ -998,7 +1009,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .portfolio__button-list {
     margin-bottom: 50px;
     -webkit-box-pack: center;
@@ -1153,7 +1164,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .portfolio__card-item {
     width: 354px;
     margin-right: 30px;
@@ -1168,7 +1179,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .portfolio__card-item {
     width: 370px;
     margin-left: 30px;
@@ -1267,13 +1278,13 @@ img {
   border-bottom: 1px solid #eeeeee;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .card {
     width: 354px;
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .card {
     width: 370px;
   }
@@ -1342,13 +1353,19 @@ img {
   background-color: #2f303a;
 }
 
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .footer-form__input {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .footer-conteiner {
     text-align: center;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-form {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1389,7 +1406,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .footer-conteiner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1636,7 +1653,7 @@ img {
   color: #2196f3;
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
     height: 581px;
