--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -68,6 +68,12 @@
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: $mobile-max) {
+  .footer-form__input {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: $tablet-max) {
   .footer-conteiner {
     text-align: center;
