--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -7,6 +7,7 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: $primary-white-color;
   color: $primary-text-color;
   font-family: Roboto, sans-serif;
