--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -4,6 +4,7 @@
   @extend %flex-centered;
   @extend %section;
   max-width: 100%;
+  width: 100%;
   padding: 118px 60px;
   text-align: center;
   border-right-color: #c4c4c4;
@@ -74,6 +75,10 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: $primary-white-color;
+
+  @media screen and(min-width: 320px) and (max-width: $mobile-max) {
+    width: 100%;
+  }
 
   @media screen and (min-width: $desktop-min) {
     width: 696px;
