--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
 .hero, .features, .team, .partners, .portfolio, .page-footer {
-  width: 100%;
   min-width: 320px;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -23,11 +22,16 @@
 }
 
 .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
-  width: 100%;
-  min-width: 320px;
   padding: 0 15px 0 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
+    width: 480px;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -574,7 +578,7 @@ img {
 }
 
 .team-member {
-  width: 100%;
+  width: 450px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -584,12 +588,20 @@ img {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .team-member {
+    width: 100%;
+  }
+}
+
 .team-member:last-child {
   margin-bottom: 0;
 }
 
 .team-member__img {
-  max-width: 100%;
+  width: 450px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .team-member__name {
@@ -604,7 +616,7 @@ img {
 }
 
 .team-member__position {
-  padding-bottom: 14px;
+  padding-bottom: 16px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -669,7 +681,7 @@ img {
 }
 
 .social-list {
-  padding: 0 32px 30px;
+  padding: 0 32px 24px;
 }
 
 .social-list__item {
@@ -822,16 +834,8 @@ img {
 
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .partners__item {
-    width: 210px;
-    min-width: calc(46.67%);
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
-  .partners__item:nth-child(2n) {
-    margin-right: 0;
-  }
-  .partners__item:nth-child(n + 5) {
-    margin-bottom: 0;
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
   }
 }
 
@@ -865,7 +869,7 @@ img {
   fill: #2196f3;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .partners__item {
     min-width: calc(46.67%);
     margin-right: 30px;
