--- a/sass/components/_partners.scss
+++ b/sass/components/_partners.scss
@@ -25,17 +25,8 @@
 
 @media screen and (min-width: 320px) and (max-width: $mobile-max) {
   .partners__item {
-    width: 210px;
-    min-width: calc(#{50%-3.33%});
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-    &:nth-child(n + 5) {
-      margin-bottom: 0;
-    }
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
   }
 }
 
@@ -62,7 +53,7 @@
   }
 }
 
-@media screen and (max-width: $tablet-max) {
+@media screen and (min-width: $mobile-min) and (max-width: $tablet-max) {
   .partners__item {
     min-width: calc(#{50%-3.33%});
     margin-right: 30px;
