--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,7 @@ img {
 
 .team-member {
   width: 450px;
+  height: 622px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -599,7 +600,6 @@ img {
 }
 
 .team-member__img {
-  width: 450px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -633,6 +633,7 @@ img {
   }
   .team-member {
     width: 354px;
+    height: 536px;
     margin-right: 30px;
     margin-bottom: 30px;
   }
@@ -669,14 +670,12 @@ img {
   }
   .team-member {
     width: 270px;
+    height: 428px;
     margin-right: 30px;
     margin-bottom: 0;
   }
   .team-member:last-child {
     margin-right: 0;
-  }
-  .team-member__img {
-    width: 270px;
   }
 }
 
@@ -1415,9 +1414,9 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: top;
-        -ms-flex-align: top;
-            align-items: top;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
   .footer-block--positioned {
     display: -webkit-box;
