--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -74,6 +74,21 @@
   border-bottom: 1px solid #eeeeee;
 }
 
+@media screen and (min-width: 320px) and (max-width: $mobile-max) {
+  .card {
+    height: auto;
+
+    .card__item {
+      width: 100%;
+      height: 100%;
+    }
+
+    .card__picture {
+      min-width: 100%;
+    }
+  }
+}
+
 @media screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
   .card {
     width: 354px;
