--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,6 +29,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
+  max-width: 100%;
+  max-height: 100%;
   width: 450px;
   height: 609px;
   transition: transform $animation-var;
