--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -67,6 +67,13 @@
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: $mobile-max) {
+  .team-member {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @media screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
   .team {
     &__list {
